# glft-market-making-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/glft_lab/: __init__.py  __main__.py  cli.py  data.py  episodes.py  figures.py  glft.py  hazard.py  replay.py  strategy.py  walkforward.py
tests/: test_cli.py  test_data.py  test_episodes.py  test_figures.py  test_glft.py  test_hazard.py  test_replay.py  test_strategy.py  test_walkforward.py
